# Iris_Simulation

./: .gitignore  CHANGELOG.md  DOCUMENTATION.md  Dockerfile  EXPERIMENTS_GUIDE.md  GRAPHIQUES_README.md  Iris_proto_complet.md  MAPPING_THEORY_CODE.md  Makefile  RAPPORT_CORRECTIONS_IRIS.md  README.md  config.yaml  figures_doc.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_antagonism.py  test_experiment_small.py  test_history_consistency.py  test_prix_stable.py  test_rad_pure.py  test_rad_with_demo.py  test_thermodynamic_scenarios.py  test_vd_evolution.py  test_with_chambre.py
iris/: __init__.py
iris/analysis/: __init__.py  iris_visualizer.py
iris/core/: __init__.py  iris_catastrophes.py  iris_chambre_relance.py  iris_comptes_entreprises.py  iris_demographics.py  iris_entreprises.py  iris_model.py  iris_oracle.py  iris_prix.py  iris_rad.py  iris_scenarios.py  iris_types.py  iris_validation.py
iris/simulations/: __init__.py  experiment_grid.py  generate_report.py  performance_test.py  plot_analysis.py  run_simulation.py
iris/tests/: test_comptes_entreprises.py  test_comptes_entreprises_edge_cases.py
iris/utils/: __init__.py  config_loader.py  logging_config.py  math_helpers.py  validation.py
results/test_grid/: RAPPORT_ANALYSE.md  summary.csv
results/test_grid/N100_cata0_rho005_seed1_t120/: history.csv
results/test_grid/N100_cata1_rho005_seed1_t120/: history.csv
results/test_grid/N200_cata0_rho005_seed1_t120/: history.csv
validation_results/: monte_carlo_results.json  sensitivity_eta_alpha.json
